# Crowddata_data_processing_HMG

./: .gitignore  config.py  pyproject.toml  requirements.txt  setup.py  결과데이터_템플릿.xml
BigQuery/: Extract_query.sql
Extract_Processing/: Run_Extracting_Pipeline.py  TargetData_Extract.py  check_object_count.py  create_object_csv_ver2.py  csv_with_source_data.py  data_processing_1128.py  gcs_path_downloader_ver2.py  json_formatter.py
Extract_Processing_Merge/: TargetData_Extract.py  check_object_count_Merge.py  create_object_csv_ver2.py  csv_merged.py  csv_with_gcs_source_data.py  data_processing_1212_merged.py  gcs_path_downloader_ver2.py  json_formatter.py
Setting_Processing/: Run_Setting_Pipeline.py  csv_with_source_data.py  data_setting_1209.py  gcs_path_downloader.py  json_formatter.py
Verification_Processing/: Run_Verification_Pipline.py  TargetData_Extract.py  create_object_csv.py  csv_with_source_data.py  json_formatter.py
